@@ -1,0 +1,4 @@
+letters = ['a', 'b', 'c']
+
+for index, letter in enumerate(letters):
+    print(letter)
